--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,14 @@ services:
     ports:
       - "5002:5002"
     depends_on:
-      - redis
-  redis:
+      - myredis
+  myredis:
     image: "redis:alpine"
-    expose:
-      - "6379"
+    ports:
+    - "6379"
+    volumes: 
+    - redis-data:/data 
+    
+volumes:
+  redis-data:
+
